[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{ name = "xinetzone", email = "735613050@qq.com" }]
dynamic = ["version", "description"]
license = { file = "LICENSE" }
name = "xinetzone"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["d2py", "pydata_sphinx_theme"]
maintainers = [{ name = "xinetzone", email = "735613050@qq.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/xinetzone.github.io"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "pytest-regressions",
  "sphinxext-rediraffe",
  "sphinx-copybutton",
  "sphinx-intl",
  "ablog",
  "sphinx-thebe",
  "sphinx-comments",
  "plotly",
  "pandas",
  "matplotlib",
  "sphinx-inline-tabs",
  "sphinx-panels",
  "sphinxcontrib-bibtex"
]
coverage = ["pytest-cov", "codecov", "xinetzone[test]"]
dev = ["pyyaml", "pre-commit", "xinetzone[coverage]"]
test = ["pytest", "xinetzone[doc]"]

[project.entry-points]
"sphinx.html_themes" = { xinetzone = "xinetzone" }

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['docs', '.git', '.github']
